--- a/etc/consul.d/client/config.json
+++ b/etc/consul.d/client/config.json
@@ -6,5 +6,6 @@
     "log_level": "INFO",
     "enable_syslog": true,
     "ui": true,
-    "start_join": ["== server node ip 1==", "== server node ip 2=="]
+    "start_join": ["== server node ip 1==", "== server node ip 2=="],
+    "advertise_addr": "10.130.79.24"
 }
